# RestApiForBook

./: .dockerignore  .env-test  .gitignore  README.md  additions.txt  alembic.ini  docker-compose.yaml  memory.txt  pyproject.toml  pytest.ini  requirements.txt
src/: config.py  database.py  exceptions.py  init.py  main.py
src/api/: auth.py  books.py  dependencies.py  readers.py  services.py
src/migrations/: env.py
src/migrations/versions/: 2025_05_21_2314-906684f00906_.py  2025_05_22_0643-73d1bbf8fd2f_.py  2025_05_22_0653-a4aa33543909_readers_add.py  2025_05_22_1620-8031cbf53ab3_books_add.py  2025_05_22_1705-08edbd71f3d0_books_isbn_30.py  2025_05_23_0633-9cf0d5279c7e_borrowedbook_i_o.py  2025_05_23_0741-603b4fc52b01_borrowedbook_fix.py  2025_05_23_1153-6b30148d4419_borrowedbook_fix.py  2025_05_23_1157-e56c2f492cd2_borrowedbook_fix.py
src/models/: __init__.py  books.py  borrowed.py  readers.py  users.py
src/repositories/: base.py  books.py  readers.py  services.py  users.py
src/repositories/mappers/: base.py  mappers.py
src/schemas/: books.py  readers.py  services.py
src/services/: auth.py  base.py  books.py  readers.py  services.py
src/utils/: db_manager.py
tests/: conftest.py  mock_readers.json
tests/integration_tests/: test_auth.py
tests/integration_tests/auth/: test_api.py
