[tool.poetry]
name = "restapiforbook"
version = "0.1.0"
description = "Library API"
authors = ["zatomis"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "1.13.2"
amqp = "5.2.0"
annotated-types = "0.7.0"
anyio = "4.4.0"
appnope = "0.1.4"
asttokens = "2.4.1"
async-timeout = "4.0.3"
asyncpg = "0.29.0"
bcrypt = "4.2.0"
billiard = "4.2.0"
black = "24.4.2"
certifi = "2024.7.4"
click = "8.1.7"
click-didyoumean = "0.3.1"
click-plugins = "1.1.1"
click-repl = "0.3.0"
comm = "0.2.2"
debugpy = "1.8.5"
decorator = "5.1.1"
dnspython = "2.6.1"
email-validator = "2.2.0"
executing = "2.0.1"
fastapi = "0.111.1"
fastapi-cache2 = "0.2.2"
fastapi-cli = "0.0.4"
greenlet = "3.0.3"
h11 = "0.14.0"
httpcore = "1.0.5"
httptools = "0.6.1"
httpx = "0.27.0"
idna = "3.7"
iniconfig = "2.0.0"
ipykernel = "6.29.5"
ipython = "8.26.0"
jedi = "0.19.1"
jinja2 = "3.1.4"
jupyter-client = "8.6.2"
jupyter-core = "5.7.2"
kombu = "5.4.0"
mako = "1.3.5"
markdown-it-py = "3.0.0"
markupsafe = "2.1.5"
matplotlib-inline = "0.1.7"
mdurl = "0.1.2"
mypy-extensions = "1.0.0"
nest-asyncio = "1.6.0"
nodeenv = "1.9.1"
packaging = "24.1"
parso = "0.8.4"
passlib = "1.7.4"
pathspec = "0.12.1"
pendulum = "3.0.0"
pexpect = "4.9.0"
pillow = "10.4.0"
platformdirs = "4.2.2"
pluggy = "1.5.0"
prompt-toolkit = "3.0.47"
psutil = "6.0.0"
ptyprocess = "0.7.0"
pure-eval = "0.2.3"
pydantic = "2.8.2"
pydantic-settings = "2.4.0"
pydantic-core = "2.20.1"
pygments = "2.18.0"
pyjwt = "2.9.0"
pyright = "1.1.375"
pytest = "8.3.2"
pytest-asyncio = "0.23.8"
pytest-dotenv = "0.5.2"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
python-multipart = "0.0.9"
pyyaml = "6.0.1"
pyzmq = "26.1.0"
redis = "5.0.8"
rich = "13.7.1"
ruff = "0.5.7"
shellingham = "1.5.4"
six = "1.16.0"
sniffio = "1.3.1"
sqlalchemy = "2.0.31"
stack-data = "0.6.3"
starlette = "0.37.2"
time-machine = "2.15.0"
tornado = "6.4.1"
traitlets = "5.14.3"
typer = "0.12.3"
typing-extensions = "4.12.2"
tzdata = "2024.1"
uvicorn = "0.30.3"
uvloop = "0.19.0"
vine = "5.1.0"
watchfiles = "0.22.0"
wcwidth = "0.2.13"
websockets = "12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
